+ entidade page builder

--- a/api/categoria/models/categoria.settings.json
+++ b/api/categoria/models/categoria.settings.json
@@ -24,8 +24,8 @@
       "required": false
     },
     "projeto": {
-      "model": "projeto",
-      "via": "categorias"
+      "via": "categorias",
+      "model": "projeto"
     },
     "cursos": {
       "via": "categoria",
