--- a/api/schedule/models/schedule.settings.json
+++ b/api/schedule/models/schedule.settings.json
@@ -9,21 +9,12 @@
     "timestamps": true
   },
   "attributes": {
-    "title": {
+    "month": {
       "type": "string"
     },
-    "text": {
-      "type": "text"
-    },
-    "date": {
-      "type": "date"
-    },
-    "projeto": {
-      "model": "projeto",
-      "via": "schedules"
-    },
-    "time": {
-      "type": "string"
+    "events": {
+      "via": "schedule",
+      "collection": "event"
     }
   }
 }
