integração das estáticas

--- a/api/event/models/event.settings.json
+++ b/api/event/models/event.settings.json
@@ -16,8 +16,8 @@
       "type": "text"
     },
     "schedule": {
-      "model": "schedule",
-      "via": "events"
+      "via": "events",
+      "model": "schedule"
     },
     "projeto": {
       "model": "projeto"
