--- a/api/page-builder/models/page-builder.settings.json
+++ b/api/page-builder/models/page-builder.settings.json
@@ -17,16 +17,16 @@
       "repeatable": true,
       "component": "pages.meta"
     },
-    "Content": {
-      "type": "dynamiczone",
-      "components": [
-        "pages.meta",
-        "pages.rich-text",
-        "nested.slide"
-      ]
-    },
     "page_id": {
       "type": "string"
+    },
+    "page_text": {
+      "type": "richtext"
+    },
+    "File": {
+      "type": "component",
+      "repeatable": true,
+      "component": "pages.file"
     }
   }
 }
