--- a/api/aula/models/aula.settings.json
+++ b/api/aula/models/aula.settings.json
@@ -25,6 +25,9 @@
     "professore": {
       "model": "professore",
       "via": "aulas"
+    },
+    "date": {
+      "type": "datetime"
     }
   }
 }
