adição dos slugs

--- a/api/aula/models/aula.settings.json
+++ b/api/aula/models/aula.settings.json
@@ -19,8 +19,8 @@
       "type": "string"
     },
     "curso": {
-      "model": "curso",
-      "via": "aulas"
+      "via": "aulas",
+      "model": "curso"
     },
     "professore": {
       "model": "professore",
