--- a/api/curso/models/curso.settings.json
+++ b/api/curso/models/curso.settings.json
@@ -13,12 +13,15 @@
       "type": "string"
     },
     "aulas": {
-      "via": "curso",
-      "collection": "aula"
+      "collection": "aula",
+      "via": "curso"
     },
     "categoria": {
       "model": "categoria",
       "via": "cursos"
+    },
+    "slug": {
+      "type": "string"
     }
   }
 }
