--- a/api/galeria/models/galeria.settings.json
+++ b/api/galeria/models/galeria.settings.json
@@ -25,6 +25,9 @@
       "type": "boolean",
       "required": true,
       "default": false
+    },
+    "video_url": {
+      "type": "string"
     }
   }
 }
