--- a/api/aula/models/aula.settings.json
+++ b/api/aula/models/aula.settings.json
@@ -24,6 +24,10 @@
     },
     "date": {
       "type": "datetime"
+    },
+    "professore": {
+      "model": "professore",
+      "via": "aulas"
     }
   }
 }
