--- a/api/curso/models/curso.settings.json
+++ b/api/curso/models/curso.settings.json
@@ -22,6 +22,13 @@
     },
     "slug": {
       "type": "string"
+    },
+    "professores": {
+      "collection": "professore",
+      "via": "curso"
+    },
+    "description": {
+      "type": "richtext"
     }
   }
 }
